# APISecurityEngine

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
apisecurityengine/: __init__.py  cli.py
apisecurityengine/ai/: __init__.py  scenario_agent.py
apisecurityengine/checks/: __init__.py  owasp_2023.py
apisecurityengine/core/: __init__.py  engine.py
apisecurityengine/models/: __init__.py  scenario.py  schemas.py
apisecurityengine/reporting/: __init__.py  html.py  sarif.py
apisecurityengine/runtime/: __init__.py  http_runtime.py
apisecurityengine/spec/: __init__.py  endpoint_graph.py  openapi_loader.py
cloudshell/: tutorial.md
docs/defenses/: function_level_auth.md  object_level_auth.md  rate_limiting.md  secrets_hygiene.md  ssrf_protection.md
scripts/: cloudshell_bootstrap.sh
tests/: __init__.py  test_checks.py  test_cli.py  test_openapi_loader.py  test_reporting.py  test_runtime.py  test_scenario_agent.py  test_schemas.py
tests/fixtures/: example_openapi_v3.yaml
